# planly

./: .env.example  .gitignore  .vercelignore  PLANLY_SPEC.md  README.md  pyproject.toml
accounts/: admin.py  forms.py  models.py  telegram.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_profile_telegram_chat_id_profile_telegram_id_and_more.py
config/: settings.py  urls.py
planner/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
planner/migrations/: 0001_initial.py  0002_reminder.py  0003_friendrequest.py  0004_eventinvite.py  0005_eventchangeproposal.py  0006_notification.py
static/css/: styles.css
templates/: base.html
templates/accounts/: login.html  register.html  telegram_entry.html
templates/planner/: calendar.html  event_change_form.html  event_confirm_delete.html  event_detail.html  event_form.html  event_list.html  friend_form.html  friend_profile.html  friends.html  home.html  notifications.html  reminder_confirm_delete.html  reminder_detail.html  reminder_form.html  settings.html
templates/planner/partials/: back_button.html  calendar.html  event_card.html  reminder_card.html  user_avatar.html
