[project]
name = "planly"
version = "0.1.0"
description = "A Django shared calendar app for personal plans, reminders, and friend invitations."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.6",
    "django-storages[boto3]>=1.14.6",
    "pillow>=12.3.0",
    "psycopg[binary]>=3.3.4",
    "whitenoise>=6.12.0",
]

[tool.vercel]
entrypoint = "config.wsgi:application"
